# IcebergTTX

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  SECURITY.md  alembic.ini  biome.jsonc  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
alembic/: env.py
alembic/versions/: 27d0b1d4557c_baseline_schema.py  9c4f2a7d1e30_add_exercise_state_transitions.py  a1b2c3d4e5f6_add_exercisemember_identity_constraint.py  a1f2c3d4e5b6_jsonb_list_columns.py  a2b3c4d5e6f7_add_auth_token.py  a4b5c6d7e8f9_snapshot_exercise_member_roles.py  a8b9c0d1e2f3_add_user_must_change_password.py  b2c3d4e5f6a7_add_exercise_debrief_notes.py  b4d7e2f19a03_index_foreign_keys.py  b5c6d7e8f9a0_normalize_communication_read_receipts.py  b7c8d9e0f1a2_add_user_is_admin.py  c3d4e5f6a7b8_add_audit_settings.py  c6d8e0f2a4b6_add_email_settings.py  c8d9e0f1a2b3_add_response_identity_constraint.py  d4e5f6a7b8c9_add_user_oidc_fields.py  d7e9f1a3b5c7_add_general_settings.py  d9e0f1a2b3c4_add_triggered_comm_idempotency.py  e0f1a2b3c4d5_add_llm_result_identity.py  e5b99d4c11c0_add_user_token_valid_after.py  e7f8a9b0c1d2_add_executive_summary.py  e8f0a2b4c6d8_add_llm_settings.py  f0a1b2c3d4e5_add_exercise_progress.py  f1e2d3c4b5a6_merge_migration_heads.py  f6a7b8c9d0e1_add_proxy_settings.py  f7a8b9c0d1e2_add_pacing_fields.py  f8a9b0c1d2e3_add_oidc_identity_role_provenance.py  f9a1b3c5d7e9_add_oidc_settings.py
app/: bootstrap_admin.py  config.py  database.py  dependencies.py  dev.py  logging_config.py  main.py  middleware.py  reconcile_attachments.py
app/models/: assessment.py  audit.py  audit_settings.py  auth_token.py  communication.py  email_settings.py  exercise.py  general_settings.py  inject.py  inject_comment.py  llm_settings.py  oidc_settings.py  proxy_settings.py  report_summary.py  response.py  scenario.py  suggested_inject.py  user.py
app/routers/: audit.py  auth.py  communications.py  effective_config.py  email.py  exercises.py  general.py  health.py  inject_comments.py  injects.py  llm.py  oidc.py  oidc_settings.py  proxy.py  responses.py  scenarios.py  settings.py  suggested_injects.py  ui.py  users.py  ws.py
app/samples/: ransomware_response.json  vendor_outage.json
app/schemas/: api.py  auth.py  scenario_json.py
app/services/: access_control.py  audit_service.py  audit_settings_service.py  auth_service.py  background.py  communication_service.py  csv_export.py  domain_events.py  effective_config_service.py  email_settings_service.py  exercise_service.py  general_settings_service.py  inject_comment_service.py  inject_service.py  llm_service.py  llm_settings_service.py  mail_service.py  oidc_settings_service.py  progression_service.py  proxy.py  proxy_settings_service.py  rate_limit.py  report_service.py  response_service.py  role_preview.py  sample_service.py  scenario_service.py  schedule_service.py  siem_service.py  team_service.py  timeline_service.py  token_service.py  user_service.py  ws_manager.py  ws_projector.py
app/services/llm/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  service.py
app/services/oidc/: __init__.py  auth0.py  authentik.py  base.py  entra.py  okta.py  service.py
app/templates/: base.html  dashboard.html  help.html  settings.html
app/templates/admin/: audit.html  config.html  email.html  general.html  llm.html  oidc.html  proxy.html  users.html
app/templates/auth/: accept_invite.html  forgot_password.html  login.html  register.html  reset_password.html
app/templates/communications/: inbox.html  index.html
app/templates/exercises/: facilitator.html  list.html  participant.html  report.html  review.html
app/templates/scenarios/: detail.html  editor.html  list.html
docker/: Caddyfile  nginx.conf
docs/: AGENT_ARCHITECTURE.md  ISSUE_TRIAGE.md  RELEASING.md  REPOSITORY_SECURITY.md
k8s/: configmap.yaml  namespace.yaml  networkpolicy.yaml  secrets.yaml
k8s/app/: deployment.yaml  pvc.yaml  service.yaml
k8s/base/: kustomization.yaml  namespace.yaml  networkpolicy.yaml
k8s/base/app/: pvc.yaml  service.yaml
k8s/base/caddy/: deployment.yaml  service.yaml
k8s/base/postgres/: backup-cronjob.yaml  pvc.yaml  service.yaml  statefulset.yaml
k8s/caddy/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
k8s/nginx/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
k8s/overlays/eks/: README.md  kustomization.yaml  targetgroupbinding.yaml
k8s/overlays/nginx/: kustomization.yaml
k8s/postgres/: backup-cronjob.yaml  pvc.yaml  service.yaml  statefulset.yaml
revised/: Deep Thought - Revised Interface.html  IcebergTTX - Revised Interface.html  app.js  screens.js
scripts/: screenshots.py
static/css/: fonts.css  iceberg.css  input.css
static/js/: app.js  theme-boot.js
static/js/pages/: admin.js  auth.js  (+8 more)
tests/: conftest.py  test_auth.py  test_background.py  test_bootstrap_admin.py  test_cascade.py  test_communications.py  test_css_custom_properties.py  test_csv_export.py  test_debrief.py  test_deployment_manifests.py  test_design_tokens.py  test_dev.py  test_domain_events.py  test_effective_config.py  test_email_settings.py  test_exercises.py  test_general_settings.py  test_health.py  test_inject_comments.py  test_injects.py  test_invites.py  test_llm.py  test_llm_providers.py  test_llm_settings.py  test_logging.py  test_oidc.py  test_oidc_settings.py  test_pacing.py  test_password_reset.py  test_proxy.py  test_rate_limit.py  test_report.py  test_response_client.py  test_response_requirements.py  test_responses.py  test_scenario_branching.py  test_scenario_validation.py  test_scenarios.py  test_security.py  test_security_headers.py  (+10 more)
website/: README.md  zensical.toml
website/docs/: changelog.md  cookbook.md  deployment.md  facilitator-guide.md  index.md  scenarios.md  security.md
(+2 files in other folders)
