[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-thought"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.21",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "aiofiles>=23.0",
    "email-validator>=2.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "httpx-ws>=0.6",
    "ruff>=0.4",
    "bandit>=1.7",
    "vulture>=2.11",
    "pyright>=1.1",
    "pytailwindcss>=0.3",
    "playwright>=1.52",
    "pytest-playwright>=0.7",
]
postgres = [
    "psycopg2-binary>=2.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.bandit]
# B101: asserts are used for type-narrowing (e.g. `assert x.id is not None`),
# not for runtime validation, so the optimized-bytecode caveat does not apply.
skips = ["B101"]
exclude_dirs = ["tests"]

[tool.vulture]
min_confidence = 60
# FastAPI route handlers and Pydantic validators are invoked by decorators,
# so vulture cannot see their call sites.
ignore_decorators = [
    "@router.*",
    "@app.*",
    "@field_validator",
    "@model_validator",
]
# Pydantic config/serialized fields and validator `cls` params are framework usage.
ignore_names = [
    "model_config",
    "cls",
    "token_type",
    "can_switch_roles",
    "author",
    "schema_version",
    "debrief_notes",
]
