[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "iceberg-ttx"
version = "0.1.0b1"
description = "A tabletop exercise (TTX) platform for running cyber incident and business resilience scenarios."
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "IcebergAI" }]
keywords = ["tabletop-exercise", "ttx", "cybersecurity", "incident-response", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.21",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.8",
    "bcrypt>=4.0",
    "python-multipart>=0.0.31",
    "jinja2>=3.1",
    "aiofiles>=23.0",
    "email-validator>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # OIDC / SSO (#25). authlib drives the Authorization-Code+PKCE flow, discovery,
    # and JWKS ID-token validation; httpx is its async HTTP client (also promoted
    # from dev for server-to-server token/JWKS fetches); itsdangerous backs the
    # Starlette SessionMiddleware that stores the transient state/nonce/PKCE verifier.
    "authlib>=1.6",
    "httpx>=0.27",
    "itsdangerous>=2.0",
]

[project.optional-dependencies]
# Pluggable AI backend (#26). Every provider's SDK is an opt-in extra — no LLM SDK
# is a core dependency, so all providers are on equal footing and an unconfigured
# provider never pulls its SDK (adapters import lazily). Install the extra matching
# your LLM_PROVIDER: llm-anthropic (direct Anthropic), llm-bedrock (Anthropic on
# AWS — the anthropic SDK's Bedrock client, pulls boto3), or llm-openai (covers
# LLM_PROVIDER=openai, ollama, and gemini via the OpenAI-compatible surface).
llm-anthropic = ["anthropic>=0.40"]
llm-bedrock = ["anthropic[bedrock]>=0.40"]
llm-openai = ["openai>=1.40"]
# Install every provider SDK at once (used by the container image).
llm-all = ["anthropic[bedrock]>=0.40", "openai>=1.40"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-xdist>=3.6",
    "httpx>=0.27",
    "httpx-ws>=0.6",
    "testcontainers[postgres]>=4.0",
    "ruff>=0.4",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "vulture>=2.11",
    "pyright>=1.1",
    "pytailwindcss>=0.3",
    "playwright>=1.52",
    "pytest-playwright>=0.7",
    # All provider SDKs so a dev env can run/smoke any LLM_PROVIDER (the test suite
    # itself mocks providers and needs none of these).
    "anthropic[bedrock]>=0.40",
    "openai>=1.40",
]

[project.scripts]
# Out-of-band operator bootstrap (#65): create/promote an admin or facilitator.
# Also runnable without install as `python -m app.bootstrap_admin`.
iceberg-ttx-admin = "app.bootstrap_admin:main"
# Local source-development entrypoint: performs an initial Tailwind build, then
# supervises Tailwind watch mode and Uvicorn reload mode in one terminal.
iceberg-ttx-dev = "app.dev:main"

[project.urls]
Homepage = "https://github.com/IcebergAI/IcebergTTX"
Repository = "https://github.com/IcebergAI/IcebergTTX"
Issues = "https://github.com/IcebergAI/IcebergTTX/issues"

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
# Run tests in parallel across CPU cores (pytest-xdist). Each worker is a separate
# process that spins up its own throwaway Postgres testcontainer and app engine,
# so workers are fully isolated — no shared DB or in-memory state. `auto` scales
# to the host/CI core count. Disable for a single-test debug loop with `-n0`.
addopts = "-n auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py314"
# Autogenerated Alembic migrations are machine-written; don't lint their long
# column definitions. env.py (hand-written) is still linted.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# SQLModel relationships across split model files require quoted string forward
# references (Optional["Exercise"], list["Inject"]) so the mapper can resolve them
# lazily from the class registry. Unquoting (UP037) or rewriting Optional to
# `X | None` (UP045) would evaluate names imported only under TYPE_CHECKING and
# break mapper configuration at import time.
"app/models/*.py" = ["UP037", "UP045"]

[tool.bandit]
# B101: asserts are used for type-narrowing (e.g. `assert x.id is not None`),
# not for runtime validation, so the optimized-bytecode caveat does not apply.
skips = ["B101"]
exclude_dirs = ["tests"]

[tool.vulture]
min_confidence = 60
# FastAPI route handlers and Pydantic validators are invoked by decorators,
# so vulture cannot see their call sites.
ignore_decorators = [
    "@router.*",
    "@app.*",
    "@field_validator",
    "@model_validator",
]
# Pydantic config/serialized fields and validator `cls` params are framework usage.
ignore_names = [
    "model_config",
    "cls",
    "token_type",
    "can_switch_roles",
    "author",
    "schema_version",
    "debrief_notes",
]
